--- a/_css/chota.css
+++ b/_css/chota.css
@@ -2,7 +2,7 @@
  * chota.css v0.9.2 | MIT License | https://github.com/jenil/chota
  */
 :root {
-  --bg-color: #f8f8f8;
+  --bg-color: #F0F2F5;
   --bg-secondary-color: #f3f3f6;
   --color-primary: #145c85;
   --color-lightGrey: #d2d6dd;
