--- a/_layout/header.html
+++ b/_layout/header.html
@@ -7,6 +7,7 @@
         <a href="/members/">Members</a>
         <a href="/research/">Research</a>
         <a href="/reports/">Reports</a>
+        <a href="/contact" class="button outline is-small">Contact</a>
       </nav>
     </div>
   </div>
