--- a/_layout/page_foot.html
+++ b/_layout/page_foot.html
@@ -22,7 +22,9 @@
 
         </div>
         <div class="is-center">
-            Last modified {{ fill fd_mtime }} by {{fill website_mantainer}}
+            <span class="text-grey">
+            Last modified on {{ fill fd_mtime }} by {{fill website_mantainer}}
+            </span>
         </div>
         <div class="is-center">
             &copy; {{ fill author }}
