--- a/_layout/head.html
+++ b/_layout/head.html
@@ -5,14 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {{if hasmath}} {{insert head_katex.html }}     {{end}}
   {{if hascode}} {{insert head_highlight.html }}   {{end}}
-
-  <!--
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
-  -->
   <link rel="stylesheet" href="/css/chota.css">
   <link rel="stylesheet" href="/css/main.css">
   <link rel="icon" href="/assets/favicon.png">
-  {{isdef title}} <title>{{fill title}} - {{fill website_title}}</title>  {{end}}
+  {{isdef title}} <title>{{fill title}} - {{fill author}}</title>  {{end}}
 </head>
 <body>
   {{insert header.html}}
